--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- =======================================================================
-   The Javolution Project, http://javolution.org
-======================================================================= -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<!-- ======================================================================= The Javolution Project, http://javolution.org 
+    ======================================================================= -->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <!-- ============================== -->
-    <!--       GitHub configuration     -->
+    <!-- GitHub configuration -->
     <!-- ============================== -->
-  
     <scm>
         <url>https://github.com/javolution/javolution-cpp</url>
         <connection>scm:git:git://github.com/javolution/javolution-cpp</connection>
@@ -18,14 +16,13 @@
         <url>https://github.com/javolution/javolution-cpp/issues</url>
         <system>GitHub Issues</system>
     </issueManagement>
-
     <!-- ==================================================== -->
-    <!--     Project description (including license)          -->
+    <!-- Project description (including license) -->
     <!-- ==================================================== -->
     <groupId>org.javolution</groupId>
     <artifactId>libjavolution</artifactId>
     <packaging>${native.dll}</packaging>
-    <version>7.0.0-SNAPSHOT</version> 
+    <version>7.0.0-SNAPSHOT</version>
     <name>Javolution C++</name>
     <url>http://javolution.org</url>
     <description>Javolution C++ (java-like) Mirror 
@@ -44,19 +41,17 @@
         <url>http://javolution.org</url>
     </organization>
     <inceptionYear>2005</inceptionYear>
-
     <!-- ======================================================= -->
-    <!--     Properties setting                                  -->
+    <!-- Properties setting -->
     <!-- ======================================================= -->
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-    
     <!-- ======================================================= -->
-    <!--     Native compiler options (platform based)            -->
+    <!-- Native compiler options (platform based) -->
     <!-- ======================================================= -->
     <profiles>
-        <profile> 
+        <profile>
             <id>windows</id>
             <activation>
                 <os>
@@ -64,32 +59,29 @@
                 </os>
             </activation>
             <properties>
-                <native.classifier>win32</native.classifier>  
+                <native.classifier>win32</native.classifier>
                 <native.dll>dll</native.dll> <!-- Default -->
-                <native.compilerConcurrency>1</native.compilerConcurrency>  <!--  Bug in Visual Studio 2013 for parallel compilations -->              
-                
-                <!-- Only maven dependencies to dynamic libraries are supported 
-                     since we build either a dynamic library or an executable.  --> 
+                <native.compilerConcurrency>1</native.compilerConcurrency>  <!-- Bug in Visual Studio 2013 for parallel compilations -->
+                <!-- Only maven dependencies to dynamic libraries are supported since we build either a dynamic library or 
+                    an executable. -->
                 <compile.dependency.type>lib</compile.dependency.type>
                 <compile.dependency.classifier /> <!-- No classifier for .lib secondary artifact of dll -->
                 <runtime.dependency.type>dll</runtime.dependency.type>
                 <runtime.dependency.classifier>win32</runtime.dependency.classifier>
-          
-                <!-- Microsoft Visual Studio Community 2013 can be installed free of charge from: https://www.visualstudio.com/en-us/news/vs2013-community-vs.aspx  -->                
+                <!-- Microsoft Visual Studio Community 2013 can be installed free of charge from: 
+                     https://www.visualstudio.com/en-us/news/vs2013-community-vs.aspx -->
                 <native.compilerProvider>msvc</native.compilerProvider>
-                <native.envFactoryName>org.codehaus.mojo.natives.msvc.MSVC2013x86EnvFactory</native.envFactoryName>                 
+                <native.envFactoryName>org.codehaus.mojo.natives.msvc.MSVC2013x86EnvFactory</native.envFactoryName>
                 <native.compilerExecutable />
                 <native.linkerProvider>msvc</native.linkerProvider>
                 <native.linkerExecutable />
-                <native.linkerSecondaryOutputExtensions>lib</native.linkerSecondaryOutputExtensions>     
+                <native.linkerSecondaryOutputExtensions>lib</native.linkerSecondaryOutputExtensions>
                 <native.define>/D</native.define>
-            
-                <!-- On windows the stack trace is only available for code compiled with optimization disabled -->    
+                <!-- On windows the stack trace is only available for code compiled with optimization disabled -->
                 <native.dll.compilerOptions>/EHsc /TP /W4 /Od /Zi /Fd${project.artifactId} /MDd /DLL</native.dll.compilerOptions>
-                <native.dll.linkerOptions>/DEBUG /DLL</native.dll.linkerOptions>                
-                
+                <native.dll.linkerOptions>/DEBUG /DLL</native.dll.linkerOptions>
                 <!-- On windows to build the javolution dll we link with DbgHelp.Lib to get backtrace working. -->
-                <native.javolution.linkerOptions>${project.basedir}\lib\windows\DbgHelp.Lib</native.javolution.linkerOptions>                
+                <native.javolution.linkerOptions>${project.basedir}\lib\windows\DbgHelp.Lib</native.javolution.linkerOptions>
             </properties>
         </profile>
         <profile> <!-- On linux we have to include libdl -->
@@ -100,74 +92,34 @@
                 </os>
             </activation>
             <properties>
-             <native.classifier>linux</native.classifier>  
+                <native.classifier>linux</native.classifier>
                 <native.dll>so</native.dll> <!-- Default -->
                 <native.compilerConcurrency>16</native.compilerConcurrency>
-                
-                <!-- Only maven dependencies to dynamic libraries are supported 
-                     since we build either a dynamic library (default) or an executable.  --> 
+                <!-- Only maven dependencies to dynamic libraries are supported since we build either a dynamic library (default) 
+                    or an executable. -->
                 <compile.dependency.type>so</compile.dependency.type>
                 <compile.dependency.classifier>linux</compile.dependency.classifier>
                 <runtime.dependency.type>so</runtime.dependency.type>
                 <runtime.dependency.classifier>linux</runtime.dependency.classifier>
-          
-                <native.envFactoryName />                 
+                <native.envFactoryName />
                 <native.compilerProvider>generic</native.compilerProvider>
                 <native.compilerExecutable>g++</native.compilerExecutable>
                 <native.linkerProvider>generic</native.linkerProvider>
                 <native.linkerExecutable>g++</native.linkerExecutable>
-                <native.linkerSecondaryOutputExtensions />     
+                <native.linkerSecondaryOutputExtensions />
                 <native.define>-D</native.define>
-            
-                <native.dll.compilerOptions>-Wall -O2 -g -fPIC</native.dll.compilerOptions>
-                <native.dll.linkerOptions>-pthread -rdynamic -shared</native.dll.linkerOptions> <!-- Option -rdynamic to obtains backtrace -->               
-                
+                <native.dll.compilerOptions>-Wall -O2 -g -fPIC -std=c++11</native.dll.compilerOptions>
+                <native.dll.linkerOptions>-pthread -rdynamic -shared</native.dll.linkerOptions> <!-- Option -rdynamic to obtains backtrace -->
                 <!-- On linux to build javolution we link with the debug library to get backtrace working. -->
-                <native.javolution.linkerOptions>-ldl</native.javolution.linkerOptions>                      
+                <native.javolution.linkerOptions>-ldl</native.javolution.linkerOptions>
             </properties>
         </profile>
-        <profile> <!-- On solaris we include libdl too -->
-            <id>solaris</id>
-            <activation>
-                <os>
-                    <name>SunOS</name>
-                    <arch>sparc</arch>
-                </os>
-            </activation>
-             <properties>
-             <native.classifier>solaris</native.classifier>  
-                <native.dll>so</native.dll> <!-- Default -->
-                <native.compilerConcurrency>16</native.compilerConcurrency>
-                
-                <!-- Only maven dependencies to dynamic libraries are supported 
-                     since we build either a dynamic library (default) or an executable.  --> 
-                <compile.dependency.type>so</compile.dependency.type>
-                <compile.dependency.classifier>solaris</compile.dependency.classifier>
-                <runtime.dependency.type>so</runtime.dependency.type>
-                <runtime.dependency.classifier>solaris</runtime.dependency.classifier>
-          
-                <native.envFactoryName />                 
-                <native.compilerProvider>generic</native.compilerProvider>
-                <native.compilerExecutable>CC</native.compilerExecutable>
-                <native.linkerProvider>generic</native.linkerProvider>
-                <native.linkerExecutable>CC</native.linkerExecutable>
-                <native.linkerSecondaryOutputExtensions />     
-                <native.define>-D</native.define>
-            
-                <native.dll.compilerOptions>-xtarget=generic -mt -g -xO2 -xcode=pic32</native.dll.compilerOptions>
-                <native.dll.linkerOptions>-mt -lpthread -G</native.dll.linkerOptions>               
-                
-                <!-- On solaris to build javolution we link with the debug library to get backtrace working. -->
-                <native.javolution.linkerOptions>-ldl -ldemangle -lrt</native.javolution.linkerOptions>                      
-            </properties>
-           </profile>
     </profiles>
-
     <build>
         <plugins>
             <!-- ======================================== -->
-            <!--     Native Plugin Configuration (DLL)    -->
-            <!-- ======================================== -->  
+            <!-- Native Plugin Configuration (DLL) -->
+            <!-- ======================================== -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>native-maven-plugin</artifactId>
@@ -178,9 +130,9 @@
                     <workingDirectory>${project.build.directory}/${native.classifier}</workingDirectory>
                     <compilerOutputDirectory>${project.build.directory}/${native.classifier}/objs</compilerOutputDirectory>
                     <linkerOutputDirectory>${project.build.directory}/${native.classifier}</linkerOutputDirectory>
-                    <externalLibDirectory>${project.build.directory}/${native.classifier}</externalLibDirectory> 
+                    <externalLibDirectory>${project.build.directory}/${native.classifier}</externalLibDirectory>
                     <envFactoryName>${native.envFactoryName}</envFactoryName>
-                    <numberOfConcurrentCompilation>${native.compilerConcurrency}</numberOfConcurrentCompilation>        
+                    <numberOfConcurrentCompilation>${native.compilerConcurrency}</numberOfConcurrentCompilation>
                     <compilerProvider>${native.compilerProvider}</compilerProvider>
                     <compilerExecutable>${native.compilerExecutable}</compilerExecutable>
                     <linkerProvider>${native.linkerProvider}</linkerProvider>
@@ -188,38 +140,50 @@
                     <linkerStartOptions>
                         <linkerStartOption>${native.dll.linkerOptions}</linkerStartOption>
                     </linkerStartOptions>
-                   <linkerEndOptions>
+                    <linkerEndOptions>
                         <linkerEndOption>${native.javolution.linkerOptions}</linkerEndOption>
-                   </linkerEndOptions>
-                   <linkerSecondaryOutputExtensions>${native.linkerSecondaryOutputExtensions}</linkerSecondaryOutputExtensions>
-
-                   <!-- ========================= -->
+                    </linkerEndOptions>
+                    <linkerSecondaryOutputExtensions>${native.linkerSecondaryOutputExtensions}</linkerSecondaryOutputExtensions>
+                    <!-- ========================= -->
                     <!-- Project Specific Settings -->
-                    <!-- ========================= -->                    
-                     <compilerStartOptions>
+                    <!-- ========================= -->
+                    <compilerStartOptions>
                         <compilerStartOption>${native.dll.compilerOptions}</compilerStartOption>
                         <compilerStartOption>${native.define}JAVOLUTION_DLL_EXPORT</compilerStartOption>
                         <compilerStartOption>${native.define}JAVOLUTION_VERSION=\"${project.version}-${native.classifier}\"</compilerStartOption>
                     </compilerStartOptions>
-                   <sources>
-                        <source><directory>${project.basedir}/src/include/c++</directory><includes><include>**/*.cpp</include></includes></source>
-                        <source><directory>${project.basedir}/src/main/c++</directory><includes><include>**/*.cpp</include></includes></source>
-                        <source><directory>${project.basedir}/src/include/c++</directory><deployable>true</deployable></source>
-                        <source><directory>${project.basedir}/src/main/c++</directory><deployable>true</deployable></source>
+                    <sources>
+                        <source>
+                            <directory>${project.basedir}/src/include/c++</directory>
+                            <includes>
+                                <include>**/*.cpp</include>
+                            </includes>
+                        </source>
+                        <source>
+                            <directory>${project.basedir}/src/main/c++</directory>
+                            <includes>
+                                <include>**/*.cpp</include>
+                            </includes>
+                        </source>
+                        <source>
+                            <directory>${project.basedir}/src/include/c++</directory>
+                            <deployable>true</deployable>
+                        </source>
+                        <source>
+                            <directory>${project.basedir}/src/main/c++</directory>
+                            <deployable>true</deployable>
+                        </source>
                     </sources>
-               </configuration>
+                </configuration>
             </plugin>
- 
             <!-- ======================================================= -->
-            <!--     Deployement Configuration                           -->
-            <!-- ======================================================= -->                   
+            <!-- Deployement Configuration -->
+            <!-- ======================================================= -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <version>2.5.3</version>
             </plugin>
-            
         </plugins>
     </build>
-        
 </project>
