--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,7 @@
 							<envFactoryName>org.javolution.maven.MSVC2015x64EnvFactory</envFactoryName>
 							<compilerStartOptions>
 								<compilerStartOption>/EHsc /TP /W4 /O2 /Zi
-									/Fd${project.artifactId} /MT</compilerStartOption>
+									/Fd${project.artifactId} /MT /utf-8</compilerStartOption>
 							</compilerStartOptions>
 							<linkerProvider>msvc</linkerProvider>
 							<linkerExecutable>lib</linkerExecutable>
