--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,10 @@
 				<groupId>com.soebes.maven.plugins</groupId>
 				<artifactId>doxygen-maven-plugin</artifactId>
 				<version>1.1.0</version>
+				<configuration>
+				   <input>${project.basedir}/src/main/c++</input>
+                  <recursive>true</recursive>
+                 </configuration>				
 			</plugin>
 		</plugins>
 	</reporting>
